[package]
name = "rust-async-tuyapi"
version = "1.3.0"
authors = ["Rasmus Lövegren <rasmus@lovegren.fi>", "Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2024"
description = "This package is a rust port of the exellent NodeJS implementation by codetheweb for the Tuya API, adapted for async usage"
homepage = "https://github.com/FruitieX/rust-async-tuyapi"
repository = "https://github.com/FruitieX/rust-async-tuyapi"
license-file = "LICENSE"
keywords = ["tuya", "smarthome", "smartlife"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
base64 = "0.22"
hex = "0.4"
json = "0.12"
lazy_static = "1.5"
log = "0.4"
md5 = "0.8"
nom = "8.0"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
aes = "0.8.4"
block-modes = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "net", "time", "rt", "sync"], optional = true }
hmac = "0.12.1"
sha2 = "0.10.9"
ecb = "0.1.2"
rand = "0.10"
inout = { version = "0.1.3", features = ["block-padding", "std"] }
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
aes-gcm = "0.10.3"
futures = "0.3.32"
async-std = { version = "1.13.2", optional = true }
embassy-executor = { version = "0.10.0", optional = true }
embassy-net = { version = "0.9.1", optional = true, features = ["medium-ethernet", "proto-ipv4", "tcp"] }
embedded-io-async = "0.7.0"
embassy-time = "0.5.1"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
embassy = ["dep:embassy-executor", "dep:embassy-net"]
